--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,13 @@
   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
   crossorigin=""/>
 
+  <!-- for leaflet markerCluster -->
+  <!-- <link rel="stylesheet" href="../node_modules/leaflet.markercluster/dist/MarkerCluster.css"> -->
+
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+
+
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
